[package]
name = "clojure-cli"
version = "0.1.0"
edition = "2021"
authors = ["andelf <andelf@gmail.com>"]
description = "clojure cli"
license = "MIT"

[[bin]]
name = "clojure"

[dependencies]
which = "4.2.5"
anyhow = "1.0.62"
dunce = "1.0.2"
md-5 = "0.10.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
zip = "0.6.0"
tempfile = "3"
indicatif = "0.17"
